--- a/upload.html
+++ b/upload.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-Learn — Upload Course</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-Learn — Upload Course</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="navbar">
-    <div class="logo">📘 E-Learn</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#">My Learning</a>
-      <a href="#">Courses</a>
-    </nav>
-  </header>
+  <header class="navbar">
+    <div class="logo">📘 E-Learn</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#">My Learning</a>
+      <a href="courses.html">Courses</a>
+    </nav>
+  </header>
 
-  <section class="upload-section">
-    <h2>Upload a New Course</h2>
-    <form id="uploadForm" class="upload-form">
-      <input type="text" id="title" placeholder="Course Title" required>
-      <textarea id="description" placeholder="Course Description"></textarea>
-      <input type="url" id="link" placeholder="Course Link (YouTube/Drive)" required>
-      <button type="submit" class="primary-btn">Upload</button>
-    </form>
-  </section>
+  <section class="upload-section">
+    <h2>Upload a New Course</h2>
+    <form id="uploadForm" class="upload-form">
+      <input type="text" id="title" placeholder="Course Title" required>
+      <textarea id="description" placeholder="Course Description"></textarea>
+      <input type="url" id="link" placeholder="Course Link (YouTube/Drive)" required>
+      <button type="submit" class="primary-btn">Upload</button>
+    </form>
+  </section>
 
-  <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
